--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
-    "eslint-config-react-app": "^7.0.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "phosphor-react": "^1.4.1",
@@ -18,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
